--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         /* Steam-like purple theme */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #171A21; /* Steam background color */
-            color: #c7d5e0; /* Light purple text */
+            background-color: #171A21;
+            color: #c7d5e0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,7 +17,7 @@
             margin: 0;
         }
         .container {
-            background-color: #1B2838; /* Darker background for container */
+            background-color: #1B2838;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
@@ -26,7 +26,7 @@
         }
         h1 {
             text-align: center;
-            color: #8c66f4; /* Steam blue for the title */
+            color: #8c66f4;
             font-size: 28px;
         }
         h2 {
@@ -37,7 +37,6 @@
         p {
             font-size: 14px;
             text-align: center;
-            color: #c7d5e0;
             margin-bottom: 20px;
         }
         form {
@@ -46,7 +45,7 @@
             gap: 15px;
         }
         label {
-            color: #9c66f4; /* Lighter blue for form labels */
+            color: #9c66f4;
             font-size: 14px;
         }
         input[type="text"], input[type="number"], textarea {
@@ -68,7 +67,7 @@
             transition: background-color 0.3s ease;
         }
         input[type="submit"]:hover {
-            background-color: #b056e3; /* Slightly darker purple */
+            background-color: #b056e3;
         }
         textarea {
             height: 100px;
@@ -103,14 +102,14 @@
         document.getElementById("signUpForm").addEventListener("submit", function(e) {
             e.preventDefault();
 
-            let teamNumber = document.getElementById("teamNumber").value;
-            let autoPoints = document.getElementById("autoPoints").value;
-            let teleopPoints = document.getElementById("teleopPoints").value;
-            let gamePlan = document.getElementById("gamePlan").value;
+            let teamNumber = document.getElementById("teamNumber").value.trim();
+            let autoPoints = document.getElementById("autoPoints").value.trim();
+            let teleopPoints = document.getElementById("teleopPoints").value.trim();
+            let gamePlan = document.getElementById("gamePlan").value.trim();
 
-            // Ensure all fields are valid (optional due to 'required' attribute)
             if (teamNumber && autoPoints && teleopPoints && gamePlan) {
-                const scriptURL = 'https://script.google.com/macros/s/AKfycby-qhVsPpoTPp1MMHdb_SN7fH38ME-pC1wKy8BYEhxNFSnUIUZpYUJzjF8I4gAxb1gw/exec';
+                const scriptURL = 'https://script.google.com/macros/s/AKfycbywtrchqUgpAZXkJNTI6iW0qOcxlVu9mfcoWFeflrxMRtvQkPlUNkMIHUdbOiO9JSxj/exec';
+
                 fetch(scriptURL, {
                     method: 'POST',
                     body: new URLSearchParams({
@@ -123,9 +122,9 @@
                 .then(response => {
                     if (response.ok) {
                         alert('Data submitted successfully!');
-                        document.getElementById("signUpForm").reset(); // Clear the form
+                        document.getElementById("signUpForm").reset();
                     } else {
-                        throw new Error("Submission failed");
+                        alert('Submission failed: ' + response.statusText);
                     }
                 })
                 .catch(error => alert('Error! ' + error.message));
